# ollama-ui

./: .eslintrc.cjs  .prettierignore  README.md  TODO.md  bun.lockb  eslint.config.cjs  index.html  package.json  prettier.config.js  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.module.css  App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: OllamaLogo.tsx
src/components/ChatBottomBar/: ChatBottomBar.module.css  ChatBottomBar.tsx  index.ts
src/components/ChatHeader/: ChatHeader.module.css  ChatHeader.tsx
src/components/ChatMessage/: ChatMessage.module.css  ChatMessage.tsx
src/components/ChatMessages/: ChatMessages.module.css  ChatMessages.tsx
src/components/ChatModelCombobox/: ChatModelCombobox.module.css  ChatModelCombobox.tsx  index.ts
src/components/ChatModelPullProgress/: ChatModelPullProgress.tsx  index.ts
src/components/ChatModelSpotlight/: ChatModelSpotlight.module.css  ChatModelSpotlight.tsx  index.ts
src/components/ChatPullModelProgress/: ChatPullModelProgress.tsx  index.ts
src/components/LoadingSpinner/: LoadingSpinner.module.css  LoadingSpinner.tsx
src/components/MarkdownView/: MarkdownView.module.css  MarkdownView.tsx
src/components/MessageInput/: MessageInput.module.css  MessageInput.tsx
src/hooks/: use-chat.ts  useChat.ts  useChatHistory.ts  useSpotlightActions.tsx
src/lib/: i18next.ts  shiki.ts  translation.ts
src/types/: chat.ts  message.ts  pull-progress.ts
src/utils/: events.ts
(+63 files in other folders)
